syntax = "proto3";


package math;

message sum{
	int32 num1 = 1;
	int32 num2 = 2;
}


message sumRequest{
	sum sum =1;
}

message sumResponse{
	int32 result = 1;
}

service sumService {
	rpc math (sumRequest) returns (sumResponse) {}
}